--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,9 +1,11 @@
 .card {
-  padding: 1rem;
-  box-shadow: 0 2px 8´x rgba(0, 0, 0, 0.25);
-  border-radius: 14px;
-  background-color: #ffffff;
-  opacity: 0.6;
-  display: flex;
-  margin: 2%;
+    padding: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 14px;
+    background-color: #b7b7b7;
+    margin: 20px;
+  }
+
+img{
+  border-radius: 5px;
 }
