--- a/final/src/App.module.css
+++ b/final/src/App.module.css
@@ -7,6 +7,36 @@
   justify-content: center;
 }
 
+.darkMode {
+  background-color: #1f1a24;
+  color: white;
+  display: flex;
+  min-height: 100%;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.btnTheme {
+  position: absolute;
+  background-color: #1f1a24;
+  width: 120px;
+  border-radius: 10px;
+  bottom: 8px;
+  right: 16px;
+}
+
+.btnThemeDark {
+  position: absolute;
+  background-color: white;
+  color: #1f1a24;
+  width: 120px;
+  border-radius: 10px;
+  bottom: 8px;
+  right: 16px;
+}
+
 h1 {
   margin-bottom: 30px;
 }
